--- a/lounge.html
+++ b/lounge.html
@@ -34,7 +34,7 @@
         </div>
         <p>Книга интересная, причем будет интересна не только физикам, но и простым людям. Не
             верится, что человек с такой сложной судьбой и таким тяжелым заболеванием не опустил 
-            руки, а продолжал заниматься наукой.</p>
+            руки, а продолжал заниматься наукой</p>
         <div  class="name">
             <div><img src="Ellipse1.svg"></div>
             <div><p>Сергей</p></div>
