fix class name and avatar

--- a/lounge.html
+++ b/lounge.html
@@ -30,14 +30,14 @@
         <h3>Отзывы</h3>
         <div  class="name">
             <div><img src="Ellipse1.svg"></div>
-        <div><p>Анна</p></div>
+        <div class="avatar"><p>Анна</p></div>
         </div>
         <p>Книга интересная, причем будет интересна не только физикам, но и простым людям. Не
             верится, что человек с такой сложной судьбой и таким тяжелым заболеванием не опустил 
             руки, а продолжал заниматься наукой</p>
         <div  class="name">
             <div><img src="Ellipse1.svg"></div>
-            <div><p>Сергей</p></div>
+            <div class="avatar"><p>Сергей</p></div>
         </div>
         <p>Потрясающая книга, считаю, что ее должен прочитать каждый разумный человек на 
             планете. Это лишь введение в соверменные теории, но надо же с чего-то начинать.</p>
