fix width pictures

--- a/lounge.html
+++ b/lounge.html
@@ -9,14 +9,18 @@
         <h1>Краткая История времени</h1>
         <h2>Стивен Хокинг</h2>
     <div id="all">
-        <div id="stars">
+        <div id="pictures">
+            <div id="stars">
         <img src="Star 2.svg">
         <img src="Star 2.svg">
         <img src="Star 2.svg">
         <img src="Star 2.svg">
         <img src="Star 5.svg">
+        </div>
+             <div id="poster">
         <img src="Стивен Хокинг.png">
         </div>
+    </div>
         <div id="info">
         <h3>Описание</h3>
         <p>Невероятно просто о сокровенных тайнах Вселенной от уникального ученого 
