fix div stars and create div pictures

--- a/lounge.html
+++ b/lounge.html
@@ -30,7 +30,7 @@
         <p>Это издание - полный текст научно-популярного бестселлера. В главе, ранее не 
             публиковавшейся на русском языке, автор рассуждает о возможности путешествий во 
             времени. Текст сопровождают примечания и уточнения , сообщающие о достижениях 
-            современных космологов и астрономов.</p>
+            современных космологов и астрономов</p>
         <h3>Отзывы</h3>
         <div  class="name">
             <div><img src="Ellipse1.svg"></div>
