fix flex for all and info

--- a/lounge.html
+++ b/lounge.html
@@ -23,9 +23,7 @@
                     </div>
                     <div id="cost">25 BYN</div>
                 </div>
-                <div id="poster">
-                <img src="Стивен Хокинг.png">
-                </div>
+                <img id="poster" src="Стивен Хокинг.png">
             </div>
             <div id="info">
             <h3>Описание</h3>
