--- a/Мелкие задачи/массив №4.html
+++ b/Мелкие задачи/массив №4.html
@@ -5,16 +5,18 @@
         <meta charset="utf-8">
         <script>
             "use strict"
+            debugger;
             let arr = prompt("Введите строки через пробел");
             arr = arr.split(' ');
             let arrA = [];
             let a = arr.length;
             for (let i=0; i<a; i++) {
                 let str = arr[i];
-                let first = str[0];
-                if (first=='a'||first=='A'||first=='а'||first=='А') {
-                    arrA.push(arr[i]);
-                }
+                if (str.indexOf('a'||'A'||'А'||'а')!=-1) {
+                    arrA.push(str);
+                } 
+        
+
             }
             console.log(arrA);
         </script>
